# mcp-llm-eval

./: .env.example  .eval-gate.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
docs/design/: v0.5.0-retrieval-eval.md
eval/: .eval-gate-embeddings.yml  dataset.json  e2e.sh  retrieval_corpus.jsonl  retrieval_dataset.jsonl
src/mcp_llm_eval/: __init__.py  cli.py  comparison.py  config.py  embeddings.py  engine.py  formatter.py  judge.py  retrieval.py  retrieval_metrics.py  server.py  types.py
src/mcp_llm_eval/providers/: __init__.py  anthropic.py  google.py  openai.py
tests/: test_cli.py  test_comparison.py  test_config.py  test_embeddings.py  test_engine.py  test_formatter.py  test_judge.py  test_providers.py  test_rag_integration.py  test_retrieval.py  test_retrieval_metrics.py  test_server.py  test_types.py
tests/fixtures/: retrieval_corpus.jsonl  retrieval_dataset.jsonl  sample_dataset.json
